[tool.poetry]
name = "navis_loader"
version = "0.1.0"
description = "Navis ETL Loader "
authors = ["Jason DeCorte <jdecorte@decorteindustries.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
pyspark = "^2.4"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[tool.poetry.scripts]
load_tester = 'navis_loader.cli:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
